<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/run_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/local_mode" />

        <TextView
            android:id="@+id/battery_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

        <ImageView
            android:id="@+id/bleSignal_icon"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_toStartOf="@id/battery_icon"
            android:src="@drawable/signal_4"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/battery_icon"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@id/battery_percent" />

    </RelativeLayout>

    <Button
        android:id="@+id/scram"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"

        android:scrollbarSize="4dp"
        android:text="@string/scram"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop" />

    <Button
        android:id="@+id/purling"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/purling"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doubleFlash" />

    <Button
        android:id="@+id/holdCar"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/holdCar"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scram" />

    <Button
        android:id="@+id/flash"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/flash"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock" />

    <Button
        android:id="@+id/lock"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:enabled="false"
        android:background="@drawable/button_bg_color"
        android:scrollbarSize="4dp"
        android:text="@string/lock"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/stop"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/stop"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turtleOrRabbit" />

    <Button
        android:id="@+id/turtleOrRabbit"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/turtleOrRabbit"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/doubleFlash"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/doubleFlash"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trumpet" />

    <Button
        android:id="@+id/trumpet"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/trumpet"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flash" />

    <Button
        android:id="@+id/speedCut"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/speedCut"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toEndOf="@+id/speedUp"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/engineClose"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:enabled="false"
        android:background="@drawable/button_bg_color"
        android:scrollbarSize="4dp"
        android:text="@string/engineClose"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/engineOpen"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/engineOpen"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/engineOpen"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/speedUp"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/speedUp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/engineClose"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bigSnake"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="548dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/bigSnake"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/smallSnake"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/smallSnake"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="532dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/smallSnake"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/speedCut"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/snake"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/snake"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/backSnake"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/frontSnake"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/frontSnake"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bigSnake"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backSnake"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="288dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/backSnake"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/frontSnake"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backMid"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_bg_color"
        android:enabled="false"
        android:scrollbarSize="4dp"
        android:text="@string/backMid"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holdCar" />

    <Button
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_shape"
        android:text="@string/mode"
        android:textSize="30sp"
        android:textColor="@drawable/button_press_color_selector"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_shape"
        android:text="@string/connect"
        android:textColor="@drawable/button_press_color_selector"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.058" />

    <com.example.roadroller.RockerView
        android:id="@+id/rockerView"
        android:layout_width="483dp"
        android:layout_height="287dp"
        android:layout_centerInParent="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>